--- a/Main/whale_analysis.ipynb
+++ b/Main/whale_analysis.ipynb
@@ -2289,6 +2289,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As per previous  21 rolling calculation, the above graph indicates that all portfolios tend to see an increase in risk every time S&P TSX 60 has an increase in risk. My porftolio had above average increases in risk, following behind only BERKSHIRE HATHAWAY and TIGER GLOBAL MANAGEMENT. Paulson & Co seems to have followed the market for the most part, being slightly below market at times."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Calculate and plot the correlation"
    ]
   },
@@ -2315,6 +2322,13 @@
     "correlation = merged_portfolios_df.corr()\n",
     "sns.heatmap(correlation, annot=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the above correlation graph, Algo 2 is the portfolio that most correlates with the market. My portofolio had an above average correlation margin. Algo 1 is the one furthest from the market."
    ]
   },
   {
@@ -2407,6 +2421,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "According to the Annualized Sharpe Ratio calculation, Algo 1 outperformed the market, followed by my portfolio and Berkshire Hathaway. On the opposite side, Tiger Global and Paulson underperformed as compared to the market. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### How does your portfolio do?\n",
     "\n",
     "Write your answer here!"
@@ -2416,7 +2437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As according to the analysis above, my portfolio outperformed the market, however, at times it underperformed. The volatility was bigger than the market as compared to Sp "
+    "Per above analysis, the three portfolios I chose showed great volatility and high risk throughout the studied periods. Although this was expected when comparing three single portfolios against the market, it means that there is a lack of stability in their performance. On the other hand, the portfolios did outperform many, including management firms, and delivered good results. The analysis is clear"
    ]
   }
  ],
