--- a/Main/whale_analysis.ipynb
+++ b/Main/whale_analysis.ipynb
@@ -2437,8 +2437,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per above analysis, the three portfolios I chose showed great volatility and high risk throughout the studied periods. Although this was expected when comparing three single portfolios against the market, it means that there is a lack of stability in their performance. On the other hand, the portfolios did outperform many, including management firms, and delivered good results. The analysis is clear"
+    "Per above analysis, the three portfolios I chose showed great volatility and high risk throughout the studied periods. Although this was expected when comparing three single portfolios against the market, it means that there is a lack of stability in their performance. On the other hand, the portfolios did outperform many, including management firms, and delivered good results. The analysis is clear, my portfolios are competitive and offer a safetynet for investors, being behind just the Algorithms. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
