--- a/Main/whale_analysis.ipynb
+++ b/Main/whale_analysis.ipynb
@@ -1344,16 +1344,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As per data shown on graph, Algorithm 1 outperformed all portfolios and the market altogether. Algorithm 2 and Berkshire Hathway had the same level of performance as per Sharpe Ratios calculation. Paulson and Tiger underperformed at the end, showing results below the standard for the market."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Determine whether the algorithmic strategies outperform both the market (S&P TSX 60) and the whales portfolios.\n",
     "\n",
-    "Write your answer here!"
+    "As per data shown on graph, Algorithm 1 outperformed all portfolios and the market altogether. Algorithm 2 and Berkshire Hathway had the same level of performance as per Sharpe Ratios calculation. Paulson and Tiger underperformed at the end, showing results below the standard for the market.\n"
    ]
   },
   {
